--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,13 @@ a {
 
 p {
     color: var(--black);
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 1.4rem;
+    font-weight: 40;
     line-height: 160%;
 }
 
 h1 {
-    font-size: 36px;
+    font-size: 3.6rem;
     font-weight: 700;
     line-height: 123.5%;
 }
@@ -87,30 +87,41 @@ h1 {
     width: 20px;
     height: 20px;
     flex-shrink: 0;
+    padding: 27px 15px 32px 250px;
 }
 
 
 .section_1 {
     background: url(/images/background1.jpg);
+    background-repeat: no-repeat;
+    background-size: fill;
+    background-position: left center;
+
 }
 .section_1_white {
     color: var(--white);
-    font-size: 36px;
+    font-size: 3.6rem;
     font-weight: 700;
+    padding-top: 162px;
 }
 
 .section_1_regularwhite {
     color: var(--white);
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 500;
     line-height: 130%;
+    padding-top: 16px;
+    padding-bottom: 42px;
 }
 
 .section_1_button {
     color: var(--white);
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 600;
     line-height: 108.7%;
+    padding: 10px 14px;
+    border-radius: 9px;
+    background: var(--blue);
 }
 
 .section_2 {
@@ -122,4 +133,22 @@ h1 {
   align-items: center;
   justify-content: space-between;
   padding-top: 15px;
+  position: absolute;
+  top: -1%;
+  margin-top: 0px;
+}
+
+.container {
+  width: 100%;
+  max-width: 1440px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.group327 {
+  margin: 0 300px 10px 10px ;
+}
+
+.group328 {
+    
 }
