--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
-*::after{
+*, *::after, *::before{ 
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    text-align
 }
 
 ul {list-style: none;}
@@ -16,6 +15,7 @@ a {
     --blue: #037E8C;
     --black: #121214;
     --white: #FFFFFF;
+    --gray: #808080;
     font-family: 'Montserrat', sans-serif;
     font-size: 62.5%;
 }
@@ -73,7 +73,7 @@ a {
 p {
     color: var(--black);
     font-size: 1.4rem;
-    font-weight: 40;
+    font-weight: 400;
     line-height: 160%;
 }
 
@@ -134,13 +134,13 @@ h1 {
   justify-content: space-between;
   padding-top: 15px;
   position: absolute;
-  top: -1%;
+  top: 0;
   margin-top: 0px;
 }
 
 .container {
   width: 100%;
-  max-width: 1440px;
+  max-width: 1300px;
   padding: 0 20px;
   margin: 0 auto;
 }
@@ -149,6 +149,14 @@ h1 {
   margin: 0 300px 10px 10px ;
 }
 
-.group328 {
-    
+.section_3 {
+  background-color: var(--gray);
+}
+
+.section_6 {
+  background-color: var(--gray);
+}
+
+.section_8 {
+  background-color: var(--gray);
 }
