--- a/css/style.css
+++ b/css/style.css
@@ -848,6 +848,99 @@ nav ul a{
 }
 
 
+.Moto__container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+}
+.Moto__container img {
+  transform: scale(2.2);
+}
+.Moto__container li {
+  position: absolute;
+  left: 100%;
+  display: flex;
+  justify-content: center;
+  animation: infinite-roll 4s linear infinite;
+  width: 25%;
+}
+.Moto__container li:nth-child(1) {
+  animation-delay: -3s;
+}
+.Moto__container li:nth-child(2) {
+  animation-delay: -2s;
+}
+.Moto__container li:nth-child(3) {
+  animation-delay: -1s;
+}
+
+@keyframes infinite-roll {
+  0% {
+    translate: 0;
+  }
+  100% {
+    translate: -500%;
+  }
+}
+
+.flipsi__container {
+  padding: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 75px;
+  background-color: #006061;
+}
+.flipsi__container li {
+  position: relative;
+  width: 409px;
+  height: 500px;
+  perspective: 1500px;
+}
+.flipsi__container li img {
+  width: 100%;
+}
+.profile,
+.backside {
+  position: absolute;
+  transition: 1.5s;
+  backface-visibility: hidden;
+}
+.backside {
+  transform: rotateY(180deg);
+}
+.flipsi__container li:hover .profile {
+  transform: rotateY(180deg);
+}
+.flipsi__container li:hover .backside {
+  transform: rotateY(360deg);
+}
+
+.profile {
+  width: 380px;
+}
+
+.backside {
+  width: 380px;
+}
+
+.backside:nth-child(1) {
+  width: 500px;
+}
+
+.reviews__button {
+  background: none;
+  border: none;
+}
+
+.bs__h2 {
+  font-size: 2rem;
+  color: #037E8C;
+  background-color: var(--blue);
+}
+
 @media screen and (min-width: 1100px){
   .header {
     width: 100%;
